[package]
name = "dark-tower-open-companion"
version = "0.5.0"
description = "Unofficial open-source companion for the 1981 Dark Tower board game"
authors = ["Dark Tower: Open Companion contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "dark_tower_open_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
